tests/ui/parser/shebang/shebang-doc-comment.stderr
error: expected item, found `[`
  --> $DIR/shebang-doc-comment.rs:2:1
   |
LL | [allow(unused_variables)]
   | ^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

